# repro_ts_310

./: .gitignore  WORKSPACE  package.json
src/: BUILD.bazel  index.ts
